<resources>
    <string name="app_name">X Board Sinhala Keyboard</string>
    <string name="ime_name">X Board Sinhala Keyboard Input Method</string>
    <string name="step_1_title">1. Enable Keyboard in Settings</string>
    <string name="step_1_desc">Turn on X Board Sinhala Keyboard in your device Languages &amp; Input settings.</string>
    <string name="step_1_btn">Enable in Settings</string>
    <string name="step_2_title">2. Select Active Keyboard</string>
    <string name="step_2_desc">Set X Board Sinhala Keyboard as your default typing method.</string>
    <string name="step_2_btn">Choose Keyboard</string>
    <string name="step_3_title">3. Test Typing</string>
    <string name="step_3_desc">Try typing in Sinhala below!</string>
    <string name="test_hint">මෙතන ටයිප් කර බලන්න (Try typing here)...</string>
</resources>
